--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
               <p>
                I am mainly interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation and 
-              domain adaptation. I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working Self Supervised learning for Videos. 
+              domain adaptation. I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
