--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <a href="https://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>arXiv</em>, 2020. <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
+              <em>Computer Graphics Forum</em>, 2020. <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
               <br>
               <a href="https://sagiebenaim.github.io/structural-analogy/">project page</a> /
               <a href="https://arxiv.org/abs/2004.02222">arXiv</a> /
