--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
               <a href=https://www.cs.tau.ac.il/~wolf/>Lior Wolf</a>.
               </p>
               <p>
-               I am mainly interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation and 
-              domain adaptation. I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
+               I am interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation and 
+              domain adaptation. I am also intereseted in finding general inductive biases, which can be used to learn from few examples, as well as reduce the level of supervision required. 
+              I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
               </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
@@ -94,7 +95,9 @@
               <a href="https://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>Computer Graphics Forum</em>, 2020. <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
+              <em>Computer Graphics Forum</em>, 2020. 
+              <br>
+              <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
               <br>
               <a href="https://sagiebenaim.github.io/structural-analogy/">project page</a> /
               <a href="https://arxiv.org/abs/2004.02222">arXiv</a> /
@@ -136,7 +139,9 @@
               <strong>Sagie Benaim*</strong>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>NeurIPS</em>, 2020. <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
+              <em>NeurIPS</em>, 2020. 
+              <br>
+              <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
               <br>
               <a href="https://shirgur.github.io/hp-vae-gan/">project page</a> /
               <a href="https://arxiv.org/abs/2006.12226">arXiv</a> /
