--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               <a href=https://www.cs.tau.ac.il/~wolf/>Lior Wolf</a>.
               </p>
               <p>
-               I am interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation and 
-              domain adaptation. I am also intereseted in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision required. 
+               I am interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation, 
+              domain adaptation and disentanglement. I am also intereseted in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision required. 
               I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
               </p>
               <p style="text-align:center">
