--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
               domain adaptation and disentanglement. I am also intereseted in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision. 
               I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
               </p>
+              <p>
+              <strong> I'm currently on the academic job market. If you're interested in my work, please reach out! </strong>
+              </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/SagieBenaim-CV.pdf">CV</a> &nbsp/&nbsp
@@ -95,7 +98,7 @@
               <a href="https://www.cs.tau.ac.il/~dcor/">Daniel Cohen-Or</a>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>Computer Graphics Forum</em>, 2020. 
+              <em>Computer Graphics Forum</em>, 2021. 
               <br>
               <em>Also in the Deep Internal Learning workshop</em>, ECCV 2020. 
               <br>
