--- a/index.html
+++ b/index.html
@@ -638,6 +638,9 @@ mapping methods.
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="100%" valign="center">
+              <a href="presentations/speednet_and_hpvae.pptx"><em>Learning the Speediness in Videos and Generating Novel Videos From a Single Sample</em></a>, Hebrew University and Technion, 2020.
+              <br>
+              <br>
               <a href="presentations/speednet.pptx"><em>SpeedNet: Learning the Speediness in Videos</em></a>, Viz.ai, 2020.
               <br>
               <br>
@@ -666,7 +669,7 @@ mapping methods.
               <a href="presentations/nexar.pdf"><em>Generative Adversarial Networks for Image to Image Translation</em></a>, Nexar, 2018.
               <br>
               <br>
-              <a href="presentations/one_sided.pdf"><em>One-Sided Unsupervised Domain Mapping</em></a>, Hebew Univesity, Weizmann Institute and Technion, 2018.              
+              <a href="presentations/one_sided.pdf"><em>One-Sided Unsupervised Domain Mapping</em></a>, Hebrew University, Weizmann Institute and Technion, 2018.              
             </td>
           </tr>
         
