--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </p>
               <p>
                I am interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation, 
-              domain adaptation and disentanglement. I am also intereseted in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision. 
+              domain adaptation and disentanglement. I am also interested in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision. 
               I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
               </p>
               <p>
@@ -288,7 +288,7 @@ entire target.
               <a href="https://github.com/sagiebenaim/DomainIntersectionDifference">code</a>
               <p></p>
               <p>
-                We present a method for recovering the shared content between two visual domains as well as the content that is unique to each domain. This allows us to remove content specific contant of the first domain and add content specific to the second domain. We can also generate form the intersection of the two domains and their union, despite having no such samples during training. 
+                We present a method for recovering the shared content between two visual domains as well as the content that is unique to each domain. This allows us to remove content specific content of the first domain and add content specific to the second domain. We can also generate form the intersection of the two domains and their union, despite having no such samples during training. 
                 <br>
               </p>
               
