--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ mapping methods.
               <a href="https://openreview.net/pdf?id=H1VjBebR-">arXiv</a>
               <p></p>
               <p>
-              We discuss the feasability of the unsupervised cross domain generation problem. In the typical setting this problem is ill posed: it seems possible to build infinitely many alternative mappings from every target mapping. We identify the abstract notion of aligning two domains and show that only a minimal architecture and a standard GAN loss is required to learn such mappings, without the need for a cycle loss. 
+              We discuss the feasibility of the unsupervised cross domain generation problem. In the typical setting this problem is ill posed: it seems possible to build infinitely many alternative mappings from every target mapping. We identify the abstract notion of aligning two domains and show that only a minimal architecture and a standard GAN loss is required to learn such mappings, without the need for a cycle loss. 
                 <br>
               </p>
               
@@ -638,7 +638,7 @@ mapping methods.
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="100%" valign="center">
-              <a href="presentations/speednet_and_hpvae.pptx"><em>Learning the Speediness in Videos and Generating Novel Videos From a Single Sample</em></a>, Hebrew University and Technion, 2020.
+              <a href="presentations/speednet_and_hpvaegan.pptx"><em>Learning the Speediness in Videos and Generating Novel Videos From a Single Sample</em></a>, Hebrew University and Technion, 2020.
               <br>
               <br>
               <a href="presentations/speednet.pptx"><em>SpeedNet: Learning the Speediness in Videos</em></a>, Viz.ai, 2020.
