--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                A simple architectural change which forces the network to reduce its bias to global image statistics. 
                Using AdaIN, we swap global statistics of samples within a batch, stocastically, with some probability p. 
                This results in significant improvements in multiple settings including domain adaptation, domain generalization, robustness
-               and image clasification. 
+               and image classification. 
               </p>
             </td>
           </tr> 
