--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ mapping methods.
               <img src="images/fo2.png" alt="clean-usnob" width="180">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/1YvRx-4hrZoCk-nl6OgVJZlHAqOiN5hWq/view?usp=sharing">
+              <a href="https://link.springer.com/chapter/10.1007/978-3-642-39212-2_10">
                 <papertitle>Complexity of Two-variable Logic on Finite Trees</papertitle>
               </a>
               <br>
