--- a/index.html
+++ b/index.html
@@ -728,6 +728,12 @@ mapping methods.
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="100%" valign="center">
+              <a href="presentations/talk-berkeley.pdf"><em>Manipulating Structure in Images and Videos.</em></a>, Nvidia Research, Berkley, 2021.
+              <br>
+              <br>
+              <a href="presentations/talk-viscam.pdf"><em>On disentangled and few shot visual generation and understanding</em></a>, Google Research, 2020.
+              <br>
+              <br>
               <a href="presentations/speednet_and_hpvaegan.pptx"><em>Learning the Speediness in Videos and Generating Novel Videos From a Single Sample</em></a>, Hebrew University and Technion, 2020.
               <br>
               <br>
