--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <strong>Sagie Benaim</strong>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>arXiv</em>, 2020. 
+              <em>CVPR</em>, 2021. 
               <a href="https://arxiv.org/abs/2010.05785">arXiv</a> /
               <a href="https://github.com/onuriel/PermutedAdaIN">code</a> 
               <p></p>
@@ -728,7 +728,7 @@ mapping methods.
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="100%" valign="center">
-              <a href="presentations/talk-berkeley.pdf"><em>Manipulating Structure in Images and Videos.</em></a>, Nvidia Research, Berkley, 2021.
+              <a href="presentations/talk-berkeley.pdf"><em>Manipulating Structure in Images and Videos.</em></a>, Nvidia Research, Berkeley, 2021.
               <br>
               <br>
               <a href="presentations/talk-viscam.pdf"><em>On disentangled and few shot visual generation and understanding</em></a>, Google Research, 2020.
