--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <strong>Sagie Benaim</strong>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>JMLR</em>, 2021.  
+              <em>Journal of Machine Learning Research (JMLR)</em>, 2021.  
               <a href="https://jmlr.org/papers/volume22/18-489/18-489.pdf">arXiv</a> 
               <p></p>
               <p>
