--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
               <a href="https://arxiv.org/abs/2104.14535">
                 <papertitle>A Hierarchical Transformation-Discriminating Generative Model for Few Shot Anomaly Detection</papertitle>
               </a> <br>
-              <a href="mailto:shelly.sheynin3@gmail.com">Shelly Sheynin</a>,
-              <strong>Sagie Benaim</strong>,
+              <a href="mailto:shelly.sheynin3@gmail.com">Shelly Sheynin*</a>,
+              <strong>Sagie Benaim*</strong>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
-              <em>arXiv</em>, 2021. 
+              <em>ICCV</em>, 2021.
               <a href="https://shellysheynin.github.io/HTDG/">project page</a> /
               <a href="https://arxiv.org/abs/2104.14535">arXiv</a> /
               <a href="https://github.com/shellysheynin/A-Hierarchical-Transformation-Discriminating-Generative-Model-for-Few-Shot-Anomaly-Detection">code</a>
