--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
               <p style="text-align:center">
                 <name>Sagie Benaim</name>
               </p>
-              <p>I am a PhD candidate at Tel Aviv University working on computer vision and machine learning. 
-              I work in the Deep Learning Lab under the supervision of Prof. 
+              <p>I am a Postdoc at <a href=https://di.ku.dk/english/>DIKU</a> working with Prof. 
+              <a href=https://www.linkedin.com/in/sergebelongie/?originalSubdomain=dk>Serge Belongie</a> 
+             and  a member of the <a href=https://di.ku.dk/ai-centre>Pioneer Center of AI</a>.
+              </p>
+              <p>
+              Previously, I was a PhD candidate at Tel Aviv University, working in the Deep Learning Lab under the supervision of Prof. 
               <a href=https://www.cs.tau.ac.il/~wolf/>Lior Wolf</a>.
               </p>
               <p>
-               I am interested in unsupervised, semi-supervised and self-supervised learning. Much of my work focuses on generative models, image to image translation, 
-              domain adaptation and disentanglement. I am also interested in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision. 
+              I work in  the intersection of computer vision and machine learning, and am paricularly interested in computer vision for AR/VR, semi and self supervised learning, and few shot learning. 
+               
+               Much of my work focuses on content creation, generative models, image to image translation, 
+              domain adaptation and disentanglement. 
+              I am also interested in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision. 
               I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
               </p>
               <p style="text-align:center">
