--- a/index.html
+++ b/index.html
@@ -38,12 +38,7 @@
               <a href=https://www.cs.tau.ac.il/~wolf/>Lior Wolf</a>.
               </p>
               <p>
-              I work in  the intersection of computer vision and machine learning, and am paricularly interested in computer vision for AR/VR, semi and self supervised learning, and few shot learning. 
-               
-               Much of my work focuses on content creation, generative models, image to image translation, 
-              domain adaptation and disentanglement. 
-              I am also interested in finding general inductive biases, which can be used to learn from few examples, as well as to reduce the level of supervision. 
-              I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos. 
+              I work in the intersection of computer vision and machine learning. I am interested in computer vision for AR/VR, semi-supervised and self-supervised learning, as well as few-shot learning. Much of my work focuses on content creation, generative models, image to image translation, domain adaptation, and disentanglement. I am also interested in finding general inductive biases, which can be used to learn from a few examples, as well as to reduce the level of supervision. I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos.
               </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
