--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               </p>
               <p>I am a Postdoc at <a href=https://di.ku.dk/english/>DIKU</a> working with Prof. 
               <a href=https://www.linkedin.com/in/sergebelongie/?originalSubdomain=dk>Serge Belongie</a> 
-             and  a member of the <a href=https://di.ku.dk/ai-centre>Pioneer Center of AI</a>.
+             and  a member of the <a href=https://di.ku.dk/ai-centre>Pioneer Center for AI</a>.
               </p>
               <p>
               Previously, I was a PhD candidate at Tel Aviv University, working in the Deep Learning Lab under the supervision of Prof. 
@@ -104,7 +104,7 @@
               <strong>Sagie Benaim</strong>,
               <a href="https://people.cs.uchicago.edu/~ranahanocka/">Rana Hanocka</a>
               <br>
-              <em>arXiv</em>, 2021. 
+              <em>CVPR</em>, 2022. 
               <a href="https://threedle.github.io/text2mesh/">project page</a> /
               <a href="https://arxiv.org/abs/2112.03221">arXiv</a> /
               <a href="https://github.com/threedle/text2mesh">code</a>
