--- a/index.html
+++ b/index.html
@@ -1063,9 +1063,15 @@ mapping methods.
         <table width="100%" align="center" border="0" cellpadding="20"><tbody>
           <tr>
             <td width="100%" valign="center">
-               <a href="presentations/talk_aarhus.pdf"><em>Semantic Manipulation of Visual Content</em></a>, Pioneer Center of AI Colloquium, hosted by Aarhus University, 2021.
+            
+              <a href="presentations/talk_visionday.pdf"><em>Text2Mesh: Text-Driven Stylization for Meshes</em></a>, 
+               Israel Computer Vision Day 2021.
               <br>
+                            <br>               
+               <a href="presentations/talk_aarhus.pdf"><em>Semantic Manipulation of Visual Content</em></a>, 
+               Pioneer Center of AI Colloquium, hosted by Aarhus University and Technion CDS Seminar, 2021.
               <br>
+                            <br>
               Structure-Aware Manipulation of Images and Videos, 2021.
               <br>
               <a href="presentations/talk-facebook.pdf"><em>Facebook AI Research (London)</em></a>,
