--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
               <strong>Sagie Benaim</strong>,
               <a href="https://people.cs.uchicago.edu/~ranahanocka/">Rana Hanocka</a>
               <br>
-              <em>CVPR</em>, 2022. 
+              <em>CVPR</em>, 2022. &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+              <br>
               <a href="https://threedle.github.io/text2mesh/">project page</a> /
               <a href="https://arxiv.org/abs/2112.03221">arXiv</a> /
               <a href="https://github.com/threedle/text2mesh">code</a>
