--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               <a href="https://arxiv.org/abs/2105.14609">
                 <papertitle>FewGAN: Generating from the Joint Distribution of a Few Images</papertitle>
               </a>               <br>
-              <a href="mailto:lior1990@gmail.com">Noam Gat</a>,
+              <a href="mailto:lior1990@gmail.com">Lior Ben Moshe</a>,
               <strong>Sagie Benaim</strong>,
               <a href="https://www.cs.tau.ac.il/~wolf/">Lior Wolf</a> 
               <br>
