--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <strong>Sagie Benaim*</strong>,
                <a href="https://varunjampani.github.io/">Varun Jampani</a>,
                 <a href="https://www.kylegenova.com/">Kyle Genova</a>,
-             <a href="https://www.kylegenova.com/">Jonathan T. Barron</a>,
+             <a href="https://jonbarron.info/">Jonathan T. Barron</a>,
              <a href="https://www.cs.princeton.edu/~funk/">Thomas Funkhouser</a>,
               <a href="http://home.bharathh.info/">Bharath Hariharan</a>,
                <a href="https://sergebelongie.github.io/">Serge Belongie</a>. 
