--- a/index.html
+++ b/index.html
@@ -235,7 +235,8 @@ interpretable components without losing the merits of neural fields representati
               <a href="https://sergebelongie.github.io/"> Serge Belongie</a>,
               <strong>Sagie Benaim</strong>
               <br>
-              <em>ECCV Workshop on AI for Creative Video Editing and Understanding</em>, 2022. 
+              <em>ECCV Workshop on AI for Creative Video Editing and Understanding</em>, 2022. &nbsp <font color="red"><strong>(Best Paper Award)</strong></font>
+              <br>
               <a href="https://arxiv.org/abs/2206.12396">arXiv</a> /
               <a href="https://sloeschcke.github.io/Text-Driven-Stylization-of-Video-Objects/">project page</a> 
               <p></p>
