--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ interpretable components without losing the merits of neural fields representati
         <a href="https://captaine.github.io/"> Peter Ebert Christensen</a>,
         <a href="https://vesteinn.is/"> Vésteinn Snæbjarnarson</a>,
           <a href="https://addtt.github.io/"> Andrea Dittadi</a>,
-        <a href="https://sergebelongie.github.io/"> Serge Belongie</a>
-        <strong>Sagie Benaim</strong>,
+        <a href="https://sergebelongie.github.io/"> Serge Belongie</a>,
+        <strong>Sagie Benaim</strong>
               <br>
               <em>arXiv</em>, 2022. 
               <a href="https://captaine.github.io/apt/">project page</a> /
