--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </script>
             </td>
             <td style="padding:0;width:40%;max-width:40%">
-              <a href="">
+              <a href="https://openreview.net/pdf?id=juE5ErmZB61">
                 <papertitle>Polynomial Neural Fields for Subband Decomposition</papertitle>
               </a> <br>
                <a href="https://www.guandaoyang.com/">Guandao Yang*</a>,
@@ -101,6 +101,7 @@
                *Equal contribution. 
                <br>
               <em>NeurIPS</em>, 2022. 
+              <a href="https://openreview.net/pdf?id=juE5ErmZB61">arXiv</a> 
               <p>
 		We propose a new class of neural fields called
         basis-encoded polynomial neural fields (PNFs). The key advantage of a PNF is
