--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
               <p>I am a Postdoc at <a href=https://di.ku.dk/english/>DIKU</a> working with Prof. 
               <a href=https://www.linkedin.com/in/sergebelongie/?originalSubdomain=dk>Serge Belongie</a> 
              and  a member of the <a href=https://di.ku.dk/ai-centre>Pioneer Center for AI</a>.
-              </p>
-              <p>
-              Previously, I was a PhD candidate at Tel Aviv University, working in the Deep Learning Lab under the supervision of Prof. 
+             I am also an incoming Assistant Professor at the <a href=https://www.cs.huji.ac.il/> School of Computer Science and Engineering at the Hebrew University of Jerusalem</a>. Previously, I was a PhD candidate at Tel Aviv University, working in the Deep Learning Lab under the supervision of Prof. 
               <a href=https://www.cs.tau.ac.il/~wolf/>Lior Wolf</a>.
-              </p>
+                            </p>
               <p>
-              I work in the intersection of computer vision and machine learning. I am interested in computer vision for AR/VR, semi-supervised and self-supervised learning, as well as few-shot learning. Much of my work focuses on content creation, generative models, image to image translation, domain adaptation, and disentanglement. I am also interested in finding general inductive biases, which can be used to learn from a few examples, as well as to reduce the level of supervision. I spent the summer of 2019 at <a href="https://ai.google/research">Google Research</a> working on Self Supervised learning for Videos.
+              My research interests are in computer vision, machine learning and computer graphics. 
+In particular, I am interested in generative models, neural based signal representations and inverse graphics.
+I am also interested in how disentangled and generative models can be used to better understand the visual world.
               </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
