--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 In particular, I am interested in generative models, neural based signal representations and inverse graphics.
 I am also interested in how disentangled and generative models can be used to better understand the visual world.
               </p>
+              <p>
+              <strong>I am recruiting M.Sc. and Ph.D. students. If you are interested in wokring with me, please contact me!</strong>
+              </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/SagieBenaim-CV.pdf">CV</a> &nbsp/&nbsp
