--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <p style="text-align:center">
                 <name>Sagie Benaim</name>
               </p>
-             I am an Assistant Professor (senior lecturer) at the <a href=https://www.cs.huji.ac.il/> School of Computer Science and Engineering at the Hebrew University of Jerusalem</a>. Previously, I was a postdoc at <a href=https://di.ku.dk/english/>DIKU</a> working with Prof. 
+             I am an Assistant Professor (Senior Lecturer) at the <a href=https://www.cs.huji.ac.il/> School of Computer Science and Engineering at the Hebrew University of Jerusalem</a>. Previously, I was a postdoc at <a href=https://di.ku.dk/english/>DIKU</a> working with Prof. 
               <a href=https://www.linkedin.com/in/sergebelongie/?originalSubdomain=dk>Serge Belongie</a> 
              and  a member of the <a href=https://di.ku.dk/ai-centre>Pioneer Center for AI</a>. Before that, I was a PhD candidate at Tel Aviv University, working in the Deep Learning Lab under the supervision of Prof. 
               <a href=https://www.cs.tau.ac.il/~wolf/>Lior Wolf</a>.
