--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ interpretable components without losing the merits of neural fields representati
         <a href="https://captaine.github.io/"> Peter Ebert Christensen</a>,
         <a href="https://sergebelongie.github.io/"> Serge Belongie</a>
               <br>
-              <em>arXiv</em>, 2022. 
+              <em>WACV</em>, 2024. 
               <a href="https://sagiebenaim.github.io/volumetric-disentanglement/">project page</a> /
               <a href="http://arxiv.org/abs/2206.02776">arXiv</a> 
               <p></p>
@@ -275,7 +275,7 @@ interpretable components without losing the merits of neural fields representati
         <a href="https://sergebelongie.github.io/"> Serge Belongie</a>,
         <strong>Sagie Benaim</strong>
               <br>
-              <em>arXiv</em>, 2022. 
+              <em>WACV</em>, 2024. 
               <a href="https://captaine.github.io/apt/">project page</a> /
               <a href="https://arxiv.org/abs/2211.09782">arXiv</a> 
               <p></p>
