--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ I am also interested in how disentangled and generative models can be used to be
             </td>
             <td style="padding:0;width:40%;max-width:40%">
             
-              <a href="https://openreview.net/forum?id=f6rQJ83ycb">
-                <papertitle>Teaching Cars to See in a Day: Unsupervised Object Discovery with Reward Fine-tuning</papertitle>
+              <a href="https://arxiv.org/abs/2310.19080v2">
+                <papertitle>Reward Finetuning for Faster and More Accurate Unsupervised Object Discovery</papertitle>
               </a> <br>
                <a href="https://www.cs.cornell.edu/~katieluo/">Katie Z Luo</a>,
                <a href="https://www.linkedin.com/in/zhenzhen-liu-7623a7166/">Zhenzhen Liu</a>,
@@ -105,7 +105,7 @@ I am also interested in how disentangled and generative models can be used to be
                <a href="https://www.cs.cornell.edu/~kilian/">Kilian Q Weinberger</a>.
                <br>
               <em>NeurIPS</em>, 2023. 
-              <a href="https://openreview.net/forum?id=f6rQJ83ycb">arXiv</a>  
+              <a href="https://arxiv.org/abs/2310.19080v2">arXiv</a>  
      
               <p>
 We propose to adapt similar RL-based methods to Reinforcement Learning from Human Feedback (RLHF) for the task of unsupervised object discovery, i.e. learning to detect objects from LiDAR points without any training labels. 
