--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ In particular, I am interested in generative models, neural based signal represe
 I am also interested in how disentangled and generative models can be used to better understand the visual world.
               </p>
               <p>
-              <strong>I am recruiting M.Sc. and Ph.D. students. If you are interested in wokring with me, please contact me!</strong>
+              <strong>I am always seeking excellent students and postdocs. If you are interested, please contact me!</strong>
               </p>
               <p style="text-align:center">
                 <a href="mailto:sagiebenaim@gmail.com">Email</a> &nbsp/&nbsp
