--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 structurally_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:0;width:40%;max-width:40%">
               <a href="https://arxiv.org/abs/2502.14789">
                 <papertitle>Structurally Disentangled Feature Fields Distillation for 3D Understanding and Editing</papertitle>
               </a>
